--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <h2>Projects</h2>
             <ul>
                 <li>
-                    <a href="project1.html">Project 1: Sales Analysis</a>
+                    <a href="./Data_Cleaning_Layoffs.md">Project 1: Sales Analysis</a>
                     <p>An in-depth analysis of sales trends using SQL queries.</p>
                 </li>
                 <li>
-                    <a href="project2.html">Project 2: Employee Management</a>
+                    <a href="./Data_Exploration_Layoffs.md">Project 2: Employee Management</a>
                     <p>Designing an employee database schema with queries.</p>
                 </li>
             </ul>
